solc_mutator_ossfuzz_seed_corpus/test_sol/test_dcc0bbd2737939b60cc6de2babeaa115067de3d698bb5d8db82e86362e59f5cd_6f34b045a2f7f28ef91dd2b64782aa61cf83438f_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0() internal   
  {
    bytes memory l0 = bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffff00");
  }
  function f1(bytes30 i0,bool i1,int48 i2) public   
  {
    assembly
    {
      {
        for 
        {
          i0 := i2
        }
        i0
        {
          returndatacopy(add(0x80, mod(63281524196170348370152400127824245394768336495847179294818103606084609366913, 1024)), i2, mod(115792089237316195423570985008687907853269984665640564039457584007913129639935, 1024))
          for 
          {
          }
          calldataload(mod(i0, calldatasize()))
          {
            extcodecopy(i2, add(0x80, mod(115792089237316195423570985008687907853269984665640564039457584007913129639935, 1024)), 115792089237316195423570985008687907853269984665640564039457584007913129639935, mod(39567516295873084520826960967697236756461188361949787820943750094235940856406, 1024))
            codecopy(add(0x80, mod(i0, 1024)), i2, mod(i1, 1024))
          }
          {
            returndatacopy(add(0x80, mod(calldataload(mod(115792089237316195423570985008687907853269984665640564039457584007913129639935, calldatasize())), 1024)), 115792089237316195423570985008687907853269984665640564039457584007913129639935, mod(115792089237316195423570985008687907853269984665640564039457584007913129639935, 1024))
            if 97075001830521620683895955252493815064531092571648526035939460837456007241067
            {
              i1 := div(prevrandao(), 47246069767469385481852433324602104209747999872311929601051289126203881959019)
              selfdestruct(sub(115792089237316195423570985008687907853269984665640564039457584007913129639935, 92372615287591784247393489088286356052665216957393513696125916995294715613342))
            }
          }
        }
        {
          continue
        }
        function af0(ai0, ai1, ai2, ai3) -> ao0, ao1, ao2, ao3, ao4, ao5, ao6, ao7, ao8, ao9, ao10, ao11, ao12, ao13
        {
          {
            function af1(ai4, ai5, ai6, ai7, ai8, ai9, ai10, ai11, ai12, ai13) -> ao14, ao15, ao16, ao17, ao18, ao19, ao20, ao21, ao22, ao23, ao24, ao25, ao26, ao27, ao28, ao29, ao30, ao31, ao32
            {
              switch not(10853218123984771839765102950555174949227011619142354693213229831927740102488)
              case 0
              {
                return(add(0x80, mod(i0, 1024)), 0)
              }
              case 115792089237316195423570985008687907853269984665640564039457584007913129639935
              {
              }
            }
            let al0 := 81206544906052428260140510549664755170058111218651816005527799301856141382193
          }
          codecopy(add(0x80, mod(25932529198833387805091610597879673041895216270211940575531264570040493389146, 1024)), 27709953805951905593468039338421317371464057552199467927729153138617968418868, mod(ai0, 1024))
          returndatacopy(add(0x80, mod(54828741405950452413034604104270491178029975332825904730453433294457619198331, 1024)), ai2, mod(115792089237316195423570985008687907853269984665640564039457584007913129639935, 1024))
        }
      }
    }
    (i1, i1) = ((true == false), true);
    assert(i1 == (true == false));
    assert(i1 == true);
    bytes24 l0 = (true ? bytes24(0xcbd3f55246a2c231801fa2c61ba3d1ea5d86bc15781ff885) : (~((bytes23(0x0000000000000000000000000000000000000000000000) | bytes23(0xffffffffffffffffffffffffffffffffffffffffffffff)))));
  }
}
struct St0 {
  uint128 el0;
  string el1;
  address[6] el2;
  int192 el3;
}
pragma solidity >= 0.0.0;
using L0 for bytes30;
// ----
// DeclarationError 6578: (su0.sol:2354-2356): Cannot access local Solidity variables from inside an inline assembly function.
